--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@ div.tocify {
 
 <div id="this-is-wentongs-awesome-website" class="section level1">
 <h1>This is Wentong’s awesome website</h1>
-<p>Can put some markdown text here..</p>
+<p>Can put some markdown text here.. how to build this?</p>
 <p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  1.7969468  0.7314822  0.7070677 -0.4602643  0.8358805  0.3776880
-##  [7] -0.5032784 -0.3711325  1.4864041 -0.3033623</code></pre>
+<pre><code>##  [1]  0.06429031  0.18968238 -0.36233148 -1.50138868 -0.76324646  1.16430200
+##  [7]  1.24867830  0.16220186  0.32897246 -1.25197257</code></pre>
 <div id="links" class="section level2">
 <h2>Links</h2>
 <p>Let’s link to useful tools for data science:</p>
