Try interactivity plots but delete then

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -356,8 +356,8 @@ div.tocify {
 <p>Can put some markdown text here.. how to build this?</p>
 <p><img src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.06429031  0.18968238 -0.36233148 -1.50138868 -0.76324646  1.16430200
-##  [7]  1.24867830  0.16220186  0.32897246 -1.25197257</code></pre>
+<pre><code>##  [1]  0.17571183 -0.01040761  0.17123550  0.23425155 -0.62225340  1.58438886
+##  [7]  0.90640394  0.31033540  0.84340911  0.12495899</code></pre>
 <div id="links" class="section level2">
 <h2>Links</h2>
 <p>Let’s link to useful tools for data science:</p>
